--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
        <ul class="fotter_wrapper_list">
          <li><a href="">English (UK)</a> </li>
          <li><a href="">Bahasa Indonesia</a></li>
-         <li><a href="">Bahasa Melayu</a></li>s
+         <li><a href="">Bahasa Melayu</a></li>
          <li><a href="">Português(Brasil)</a></li>
          <li><a href="">English (UK)</a> </li>
          <li><a href="">English (UK)</a> </li>
@@ -128,7 +128,7 @@
               <ul class="fotter_wrapper_list">
          <li><a href="">English (UK)</a> </li>
          <li><a href="">Bahasa Indonesia</a></li>
-         <li><a href="">Bahasa Melayu</a></li>s
+         <li><a href="">Bahasa Melayu</a></li>
          <li><a href="">Português(Brasil)</a></li>
          <li><a href="">English (UK)</a> </li>
          <li><a href="">English (UK)</a> </li>
@@ -141,7 +141,7 @@
               <ul class="fotter_wrapper_list">
          <li><a href="">English (UK)</a> </li>
          <li><a href="">Bahasa Indonesia</a></li>
-         <li><a href="">Bahasa Melayu</a></li>s
+         <li><a href="">Bahasa Melayu</a></li>
          <li><a href="">Português(Brasil)</a></li>
          <li><a href="">English (UK)</a> </li>
          <li><a href="">English (UK)</a> </li>
@@ -155,7 +155,7 @@
               <ul class="fotter_wrapper_list">
          <li><a href="">English (UK)</a> </li>
          <li><a href="">Bahasa Indonesia</a></li>
-         <li><a href="">Bahasa Melayu</a></li>s
+         <li><a href="">Bahasa Melayu</a></li>
          <li><a href="">Português(Brasil)</a></li>
          <li><a href="">English (UK)</a> </li>
          <li><a href="">English (UK)</a> </li>
